# boolang-modern

./: Cargo.toml  GETTING_STARTED.md  LIBRARY.md  LICENSE  QUICKSTART.md  README.md
.templates/: runtime_stub.rs
boolang-modern/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  build.gradle.kts  settings.gradle.kts
boolang-modern/android/: build.gradle.kts
boolang-modern/docs/: overview.txt
boolang-modern/examples/: showcase.boo
boolang-modern/src/: main.rs
boolang-modern/src/ast/: mod.rs
boolang-modern/src/codegen/: mod.rs
boolang-modern/src/parser/: lexer.rs  mod.rs
boolang-modern/src/runtime/: mod.rs
crates/c2-server/: Cargo.toml  QUICKSTART.md  README.md  start-servers.ps1
crates/c2-server/configs/: c2-server.toml  merino-users.csv  reverse-shell.toml
crates/c2-server/src/: c2.rs  certbot.rs  config.rs  lib.rs  shell.rs  socks5.rs
docs/: capabilities.txt
dotnet/: BoolangInterop.sln  README.md  rust_ffi_example.rs
dotnet/BoolangInterop.Core/: BoolangInterop.Core.csproj  BoolangRuntime.cs  RustFFI.cs
dotnet/BoolangInterop.Injection/: BoolangInterop.Injection.csproj  InjectionHelper.cs  REMOTE_EXECUTOR.md  RemoteExecutor.cs
dotnet/BoolangInterop.Injection/Examples/: RemoteExecutorExample.cs
grammar/: BooModern.g4
kotlin/compiler/: build.gradle.kts
src/: ast.rs  codegen.rs  compiler.rs  error.rs  ffi.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  types.rs
src/typechecker/: mod.rs
tests/: integration_test.rs
